codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_skill_chunk codex_agent_skill_chunk_t;
typedef struct codex_agent_skill codex_agent_skill_t;
typedef struct codex_agent_skill_catalog codex_agent_skill_catalog_t;
typedef int32_t codex_agent_skill_scope_t;
typedef int32_t codex_agent_resource_origin_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_chunk_destroy(
    codex_agent_context_t *context,
    codex_agent_skill_chunk_t **chunk);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_chunk_content_copy(
    codex_agent_context_t *context,
    codex_agent_skill_chunk_t *chunk,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_chunk_next_offset(
    codex_agent_context_t *context,
    codex_agent_skill_chunk_t *chunk,
    int32_t *out_has_next_offset,
    int64_t *out_next_offset);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_chunk_total_bytes(
    codex_agent_context_t *context,
    codex_agent_skill_chunk_t *chunk,
    int64_t *out_total_bytes);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *display_name,
    const codex_agent_string_view_t *description,
    const codex_agent_string_view_t *path,
    codex_agent_skill_scope_t scope,
    int32_t is_enabled,
    int32_t has_brand_color,
    const codex_agent_string_view_t *brand_color,
    const codex_agent_string_view_t *dependencies,
    size_t dependency_count,
    int32_t can_uninstall,
    int32_t has_origin,
    codex_agent_resource_origin_t origin,
    codex_agent_skill_t **out_skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_destroy(
    codex_agent_context_t *context,
    codex_agent_skill_t **skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_name_copy(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_display_name_copy(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_description_copy(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_path_copy(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_scope(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    codex_agent_skill_scope_t *out_scope);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_is_enabled(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    int32_t *out_is_enabled);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_has_brand_color(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    int32_t *out_has_brand_color);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_brand_color_copy(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_dependencies_count(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_dependencies_copy_at(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_can_uninstall(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    int32_t *out_can_uninstall);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_origin(
    codex_agent_context_t *context,
    codex_agent_skill_t *skill,
    codex_agent_resource_origin_t *out_origin);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_catalog_destroy(
    codex_agent_context_t *context,
    codex_agent_skill_catalog_t **catalog);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_catalog_skills_count(
    codex_agent_context_t *context,
    codex_agent_skill_catalog_t *catalog,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_catalog_skills_at(
    codex_agent_context_t *context,
    codex_agent_skill_catalog_t *catalog,
    size_t index,
    codex_agent_skill_t **out_skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_catalog_errors_count(
    codex_agent_context_t *context,
    codex_agent_skill_catalog_t *catalog,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_skill_catalog_errors_copy_at(
    codex_agent_context_t *context,
    codex_agent_skill_catalog_t *catalog,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);