codex-agent-runtime-desktop/bindings/csharp/src/CodexAgent/Interop/NativeLeafValueMethods.cs


    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCreate(nint c,NativeStringView* name,NativeStringView* displayName,NativeStringView* description,NativeStringView* path,CodexSkillScope scope,int enabled,int hasBrand,NativeStringView* brand,NativeStringView* dependencies,nuint dependencyCount,int canUninstall,int hasOrigin,CodexResourceOrigin origin,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillNameCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_display_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillDisplayNameCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillDescriptionCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_path_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillPathCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_scope")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillScope(nint c,nint value,out CodexSkillScope result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_is_enabled")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillIsEnabled(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_has_brand_color")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillHasBrandColor(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_brand_color_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillBrandColorCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_dependencies_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillDependenciesCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_dependencies_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillDependenciesCopyAt(nint c,nint value,nuint index,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_can_uninstall")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCanUninstall(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_origin")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillOrigin(nint c,nint value,out CodexResourceOrigin result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_catalog_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCatalogDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_catalog_skills_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCatalogSkillsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_catalog_skills_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCatalogSkillsAt(nint c,nint value,nuint index,out nint skill);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_catalog_errors_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCatalogErrorsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_catalog_errors_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillCatalogErrorsCopyAt(nint c,nint value,nuint index,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_chunk_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillChunkDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_chunk_content_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillChunkContentCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_chunk_next_offset")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillChunkNextOffset(nint c,nint value,out int present,out long offset);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_skill_chunk_total_bytes")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus SkillChunkTotalBytes(nint c,nint value,out long result);
}
